# 42Sh

./: CMakeLists.txt  Makefile  README.md  a.out  main.c
includes/: sh.h
src/: arrows.c  arrows_cast.c  arrows_keys.c  ft_select.c  keys.c  list.c  main.c  move.c  read_line.c  term_cast.c
